# fiscalia-ia

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.es.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  intent.md  opencode.json  package-lock.json  package.json  pyproject.toml  pytest.ini
.agents/: INSTRUCTIONS.md
.ai-dlc/: config.yml
.ai-dlc/hats/: builder.md  implementer.md  planner.md  reviewer.md  test-writer.md
.ai-dlc/knowledge/: domain.md
.ai-dlc/rules/: project.md
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml
.opencode/agents/: domain-expert.md  fiscal-reviewer.md
.opencode/commands/: analyze.md  coverage.md  dev.md  lint.md  test.md
MEMORY/: CONTEXT.md  DECISIONS.md  GOTCHAS.md  INDEX.md  TODO.md
db/migrations/: 001_create_tables.sql  001_tablas_fiscales.sql  002_contratos_plsql.sql  002_task_queue.sql  004_fiscal_findings.sql  (+9 more)
docs/: 01-arquitectura.md  02-modelo-datos.md  03-contrato-mcp.md  03-contrato-plsql.md  04-api-endpoints.md  05-configuracion.md  06-llm-configuracion.md  07-despliegue-oci.md  08-anexo-tecnico.md  08-casuistica-fiscal.md  08-especificacion-agentes.md  09-plan-desarrollo.md  10-glosario.md  11-oracle-mcp-server.md  12-despliegue-docker.md  manual-implementacion-api.html  manual-implementacion-api.md
microservice/: config.py  main.py  requirements.txt
scripts/: generate_pdf.js  generate_pdf.py  md_to_pdf.py  run-oracle-mcp.js
tests/: conftest.py  factories.py
(+207 files in other folders)
